@@ -9,8 +9,9 @@
  ~ = Changes   since previous version
 
 1.9 preview 10 (2011-02-??)
- ! Docelu.pl
+ ! Map source Docelu.pl fixed
  + Bookmarks can be added (saves map position and selected map source) 
+ ! Map source Cykloatlas and relief fixed
 
 1.9 preview 9 (2011-02-22)
  + New map source: Reit- und Wanderkarte (Abo) - (requires purchased ticket)
